welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:7: error: not found: value taille
  for (i <- 1 to taille -1) {
                 ^